--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="body">
-   <img src="images/image-qr-code.png" alt="classwork">
+   <img src="images/image-qr-code.png" alt="classwork" class="my-image">
   <p class="big">Improve your front-end<br> skills by building projects</p>
 
   <p class="small">Scan the QR code to visit Frontend<br> Mentor and take your coding skills to<br> the next level</p>
