--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
   <div class="body">
-   <img src="images/image-qr-code.png" alt="classwork" class="my-image">
-  <p class="big">Improve your front-end<br> skills by building projects</p>
+   <img src="images/image-qr-code.png" alt="classwork" class="image">
+  <h1 class="big">Improve your front-end<br> skills by building projects</h1>
 
   <p class="small">Scan the QR code to visit Frontend<br> Mentor and take your coding skills to<br> the next level</p>
- 
+ </div> 
  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">SCCSMARTCODE</a>.
  </div>
-</div> 
+
 </body>
 </html>
